--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -11,6 +11,7 @@ $color-dark:#000000;
 $color-font:#F4F9F9;
 $color-background:#faf6fb;
 $color-selected:#00bfd6;
+$color-success: #00bd56;
 
 //dolatsara
 $color-purple : #4a1f61;
