user-select added

--- a/src/scss/e-shop.scss
+++ b/src/scss/e-shop.scss
@@ -177,6 +177,7 @@ section.radio-inputs {
     cursor: pointer;
     padding: 6px 10px;
     font-size: 12px;
+    user-select: none;
   }
 
   input[type="radio"]:checked + label.confirm {
