--- a/src/css/e-shop.css
+++ b/src/css/e-shop.css
@@ -244,6 +244,10 @@ section.radio-inputs label {
   cursor: pointer;
   padding: 6px 10px;
   font-size: 12px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 section.radio-inputs input[type="radio"]:checked + label.confirm {
