menu change style 1400/12/09

--- a/src/css/dolatsaraMenu.css
+++ b/src/css/dolatsaraMenu.css
@@ -33,8 +33,7 @@ body {
   background-color: #fff;
   font-size: 100%;
   direction: rtl;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body a:focus {
@@ -46,19 +45,21 @@ body .container-fluid {
   margin: 0;
 }
 
+header.dolatsara__menu {
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  border-top: 1px solid #4a1f61;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+}
+
 header.dolatsara__menu div.dolatsara__all-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
   width: 100%;
   padding: 1rem 2rem;
-  background: rgba(184, 184, 184, 0.25);
+  background: #e9e9e9;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu {
@@ -72,14 +73,11 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu button.
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu button.dolatsara__toggle-button:focus {
   border: rgba(0, 0, 0, 0.2);
   outline: 0;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu button.dolatsara__toggle-button span.navbar-toggler-icon {
   color: #b8b8b8;
-  height: -webkit-max-content;
-  height: -moz-max-content;
   height: max-content;
   padding-bottom: 0.2rem;
 }
@@ -87,7 +85,7 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu button.
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item a {
   color: #4a1f61;
   font-weight: 600;
-  font-size: 85%;
+  font-size: 13px;
   padding-left: 1rem;
   padding-right: 1rem;
 }
@@ -120,12 +118,8 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dol
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__city-button {
@@ -134,12 +128,8 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu button.d
   background-color: rgba(184, 184, 184, 0.25);
   border-radius: 8px;
   font-size: 14px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 0.5rem;
 }
 
@@ -201,25 +191,15 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item label {
   padding: 1rem 0.5rem;
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-footer {
   border: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   width: 100%;
 }
 
@@ -273,13 +253,12 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
   border-right: 1px solid #4a1f61;
   padding: 0;
   margin-right: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list button.dolatsara__setting-button svg,
-header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list button.dolatsara__setting-button i, header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list button.dolatsara__setting-button img {
+header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list button.dolatsara__setting-button i,
+header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list button.dolatsara__setting-button img {
   margin-right: 1rem;
   color: #4a1f61;
   max-width: 40px;
@@ -289,8 +268,7 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons {
   padding: 0;
   margin-top: 0;
-  -webkit-transform: translate3d(-8px, 48px, 0px) !important;
-          transform: translate3d(-8px, 48px, 0px) !important;
+  transform: translate3d(-8px, 48px, 0px) !important;
   width: 350px;
 }
 
@@ -304,8 +282,6 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li {
   width: 90px;
   height: 90px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   border-radius: 12px;
   margin: 0.5rem;
@@ -317,19 +293,10 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
   font-size: 14px;
   padding: 0;
 }
@@ -340,7 +307,9 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
   color: black;
 }
 
-header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a svg, header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a i, header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a img {
+header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a svg,
+header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a i,
+header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a img {
   max-width: 50px;
   max-height: 50px;
   font-size: 32px;
