--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -17,6 +17,7 @@ $color-success: #00bd56;
 $color-purple : #4a1f61;
 $color-gray-4:#b8b8b8;
 $color-gray-2-2:#ADB0B3;
+$color-gray-5:#e9e9e9;
 
 html {
     ::-webkit-scrollbar {
