--- a/src/scss/dolatsaraMenu.scss
+++ b/src/scss/dolatsaraMenu.scss
@@ -1,13 +1,19 @@
 @import "./base";
 
 header.dolatsara__menu {
+  box-shadow: 0px 0px 10px 0px rgba($color: $color-dark, $alpha: 0.5);
+  border-top: 1px solid rgba($color: $color-purple, $alpha: 1);
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+
   div.dolatsara__all-menu {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     width: 100%;
     padding: 1rem 2rem;
-    background: rgba($color: $color-gray-4, $alpha: 0.25);
+    background: rgba($color: $color-gray-5, $alpha: 10);
 
     nav.dolatsara__right-menu {
       padding-top: 0;
@@ -34,7 +40,7 @@ header.dolatsara__menu {
             a {
               color: rgba($color: $color-purple, $alpha: 1);
               font-weight: 600;
-              font-size: 85%;
+              font-size: 13px;
               padding-left: 1rem;
               padding-right: 1rem;
             }
@@ -133,8 +139,7 @@ header.dolatsara__menu {
               overflow-y: auto;
 
               li.dolatsara__city-list-item {
-                border-bottom: 1px solid
-                  rgba($color: $color-gray-2, $alpha: 0.2);
+                border-bottom: 1px solid rgba($color: $color-gray-2, $alpha: 0.2);
 
                 &:hover {
                   background-color: rgba($color: $color-gray-2, $alpha: 0.1);
@@ -212,7 +217,8 @@ header.dolatsara__menu {
           display: flex;
 
           svg,
-          i, img {
+          i,
+          img {
             margin-right: 1rem;
             color: rgba($color: $color-purple, $alpha: 1);
             max-width: 40px;
@@ -258,7 +264,9 @@ header.dolatsara__menu {
                   color: rgba($color: $color-dark, $alpha: 1);
                 }
 
-                svg, i , img {
+                svg,
+                i,
+                img {
                   max-width: 50px;
                   max-height: 50px;
                   font-size: 32px;
@@ -272,4 +280,3 @@ header.dolatsara__menu {
     }
   }
 }
-
