--- a/src/scss/dolatsaraMenu.scss
+++ b/src/scss/dolatsaraMenu.scss
@@ -3,7 +3,8 @@
 header.dolatsara__menu {
   box-shadow: 0px 0px 10px 0px rgba($color: $color-dark, $alpha: 0.5);
   border-top: 1px solid rgba($color: $color-purple, $alpha: 1);
-  position: fixed;
+  position: sticky;
+  top: 0;
   z-index: 100;
   width: 100%;
 
@@ -100,6 +101,8 @@ header.dolatsara__menu {
       }
 
       div.dolatsara__city-modal {
+        z-index: 10000;
+
         div.modal-header {
           display: block;
 
@@ -279,4 +282,8 @@ header.dolatsara__menu {
       }
     }
   }
+}
+
+.modal-backdrop.fade.show {
+  z-index: 0;
 }
