--- a/src/css/mediaDolatsaraMenu.css
+++ b/src/css/mediaDolatsaraMenu.css
@@ -1,6 +1,15 @@
+@media (max-width: 991px) {
+  header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item:hover {
+    border-bottom: 0;
+  }
+}
+
 @media (max-width: 576px) {
   header.dolatsara__menu div.dolatsara__all-menu {
     padding: 0.5rem;
+  }
+  header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item:hover {
+    border-bottom: 0;
   }
   header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu a.dolatsara__phone {
     width: 100px;
