--- a/src/css/common.css
+++ b/src/css/common.css
@@ -33,7 +33,8 @@ body {
   background-color: #fff;
   font-size: 100%;
   direction: rtl;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body a:focus {
@@ -61,10 +62,19 @@ button.view-all {
 
 section.single-advertising-section {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 section.single-advertising-section h2.advertising__title {
@@ -94,8 +104,10 @@ section.single-advertising-section div.advertising-placeholder {
 
 section.several-advertising-section {
   width: 90%;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 50% 50%;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
   grid-gap: 10px;
   margin: auto;
   border-bottom: 1px solid #b8b8b8;
@@ -106,14 +118,22 @@ section.several-advertising-section .advertising-placeholder {
   background-color: rgba(184, 184, 184, 0.5);
   border-radius: 12px;
   margin: 2rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 section.space-section {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 section.space-section div.space-section__parent {
@@ -136,7 +156,8 @@ section.space-section div.space-section__parent h3.space-section-title {
 div.swiper-button-prev,
 div.swiper-button-next {
   background-color: white;
-  box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
+  -webkit-box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
+          box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
   border-radius: 50%;
   width: 52px;
   height: 52px;
@@ -151,6 +172,7 @@ div.swiper-button-next:after {
 
 div.swiper-button-disabled {
   color: #979797;
-  box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
+  -webkit-box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
+          box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
 }
 /*# sourceMappingURL=common.css.map */
