--- a/src/css/dolatsaraMenu.css
+++ b/src/css/dolatsaraMenu.css
@@ -33,7 +33,8 @@ body {
   background-color: #fff;
   font-size: 100%;
   direction: rtl;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body a:focus {
@@ -46,8 +47,10 @@ body .container-fluid {
 }
 
 header.dolatsara__menu {
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   border-top: 1px solid #4a1f61;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 100;
@@ -55,11 +58,17 @@ header.dolatsara__menu {
 }
 
 header.dolatsara__menu div.dolatsara__all-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   width: 100%;
-  padding: 1rem 2rem;
+  padding: 1.35rem 2rem;
   background: #e9e9e9;
 }
 
@@ -74,25 +83,25 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu button.
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu button.dolatsara__toggle-button:focus {
   border: rgba(0, 0, 0, 0.2);
   outline: 0;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu button.dolatsara__toggle-button span.navbar-toggler-icon {
   color: #b8b8b8;
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
   padding-bottom: 0.2rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item:hover {
-  border-bottom: 2px solid #4a1f61;
+  border-bottom: 1px solid #4a1f61;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item a {
-  color: #4a1f61;
-  font-weight: 600;
+  color: black;
   font-size: 13px;
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item svg {
@@ -123,8 +132,12 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dol
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__city-button {
@@ -133,8 +146,12 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu button.d
   background-color: rgba(184, 184, 184, 0.25);
   border-radius: 8px;
   font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0.5rem;
 }
 
@@ -200,15 +217,25 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item label {
   padding: 1rem 0.5rem;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-footer {
   border: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 100%;
 }
 
@@ -262,6 +289,8 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
   border-right: 1px solid #4a1f61;
   padding: 0;
   margin-right: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -277,7 +306,8 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons {
   padding: 0;
   margin-top: 0;
-  transform: translate3d(-8px, 48px, 0px) !important;
+  -webkit-transform: translate3d(-8px, 48px, 0px) !important;
+          transform: translate3d(-8px, 48px, 0px) !important;
   width: 350px;
 }
 
@@ -291,6 +321,8 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li {
   width: 90px;
   height: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   border-radius: 12px;
   margin: 0.5rem;
@@ -302,12 +334,27 @@ header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dola
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   font-size: 14px;
   padding: 0;
+  direction: rtl;
+  max-width: 80px;
+  width: 100%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a:focus {
