--- a/src/css/e-shop.css
+++ b/src/css/e-shop.css
@@ -33,7 +33,8 @@ body {
   background-color: #fff;
   font-size: 100%;
   direction: rtl;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body a:focus {
@@ -49,9 +50,15 @@ section.shipping-time {
   height: 200px;
   padding: 2rem;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 section.shipping-time div.owl-dots {
@@ -116,10 +123,19 @@ section.shipping-time div.owl-carousel.owl-theme div.owl-stage-outer {
 }
 
 section.shipping-time div.owl-carousel.owl-theme div.owl-stage-outer div.owl-stage div.owl-item div.slide-item.item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   height: 170px;
   margin: 0 0.5rem;
 }
@@ -140,12 +156,19 @@ section.shipping-time div.owl-carousel.owl-theme div.owl-stage-outer div.owl-sta
 }
 
 section.shipping-time div.owl-carousel.owl-theme div.owl-stage-outer div.owl-stage div.owl-item div.slide-item.item ul.shipping-time__hour-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
 section.shipping-time div.owl-carousel.owl-theme div.owl-stage-outer div.owl-stage div.owl-item div.slide-item.item ul.shipping-time__hour-list li.shipping-time__hour-list-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
   width: 140px;
 }
@@ -166,7 +189,8 @@ section.shipping-time div.owl-carousel.owl-theme div.owl-stage-outer div.owl-sta
 
 section.shipping-time div.owl-carousel.owl-theme div.owl-stage-outer div.owl-stage div.owl-item div.slide-item.item ul.shipping-time__hour-list li.shipping-time__hour-list-item input[name="shipping-time-input"]:checked + label.shipping-time-hour-list-label {
   border: 3px solid #00bfd6;
-  box-shadow: 0 8px 13px -8px rgba(0, 191, 214, 0.3);
+  -webkit-box-shadow: 0 8px 13px -8px rgba(0, 191, 214, 0.3);
+          box-shadow: 0 8px 13px -8px rgba(0, 191, 214, 0.3);
   background-color: rgba(0, 191, 214, 0.03);
   cursor: default;
 }
@@ -178,9 +202,16 @@ section.shipping-time div.owl-carousel.owl-theme div.owl-stage-outer div.owl-sta
 
 section.shipping-time div.owl-carousel.owl-theme div.owl-stage-outer div.owl-stage div.owl-item div.slide-item.item ul.shipping-time__hour-list li.shipping-time__hour-list-item label.shipping-time-hour-list-label {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   border: 1px solid rgba(151, 151, 151, 0.75);
   padding: 1rem 0.5rem;
   position: relative;
@@ -213,7 +244,10 @@ section.radio-inputs label {
   cursor: pointer;
   padding: 6px 10px;
   font-size: 12px;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 section.radio-inputs input[type="radio"]:checked + label.confirm {
