--- a/src/css/mediaDolatsaraMenu.css
+++ b/src/css/mediaDolatsaraMenu.css
@@ -1,4 +1,7 @@
 @media (max-width: 991px) {
+  header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list a.logo-img-link img.logo-img {
+    margin: 1rem 0;
+  }
   header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item:hover {
     border-bottom: 0;
   }
