--- a/src/scss/dolatsara.scss
+++ b/src/scss/dolatsara.scss
@@ -65,8 +65,8 @@ section.dolatsara__main-header {
           border: 0;
           padding: 0;
 
-          svg.search-icon,
-          i.search-icon {
+          svg,
+          i {
             color: rgba($color: $color-gray-4, $alpha: 1);
           }
         }
