--- a/src/scss/dolatsaraMenu.scss
+++ b/src/scss/dolatsaraMenu.scss
@@ -50,16 +50,20 @@ header.dolatsara__menu {
             &:hover {
               border-bottom: 1px solid rgba($color: $color-purple, $alpha: 1);
             }
-
+            
             a {
               color: rgba($color: $color-dark, $alpha: 1);
               font-size: 13px;
+              display: flex;
+              align-items: center;
               // padding-left: 1rem;
               // padding-right: 1rem;
             }
 
-            svg {
-              margin-right: 0.375rem;
+            svg, i {
+              margin-right: 0.35rem;
+              font-size: 16px;
+
             }
 
             ul.dolatsara__sub-menu {
