--- a/src/scss/dolatsaraMenu.scss
+++ b/src/scss/dolatsaraMenu.scss
@@ -144,12 +144,12 @@ header.dolatsara__menu {
               border: 1px solid rgba($color: $color-gray-2, $alpha: 0.5);
             }
 
-            svg {
+            svg,i {
               padding: 0 0.375rem 0 0;
               position: absolute;
               right: 1rem;
               top: 1.5rem;
-              font-size: 28px;
+              font-size: 20px;
               color: rgba($color: $color-gray-4, $alpha: 0.5);
             }
 
