--- a/src/scss/dolatsaraMenu.scss
+++ b/src/scss/dolatsaraMenu.scss
@@ -126,9 +126,28 @@ header.dolatsara__menu {
             margin-bottom: 1rem;
           }
 
-          span {
+          span.dolatsara__selected-city {
             color: rgba($color: $color-gray-2, $alpha: 0.75);
             font-size: 14px;
+            margin-bottom: .5rem;
+          }
+        }
+
+        .dolatsara__city-name-parent {
+          display: flex;
+          flex-wrap: wrap;
+
+          p.dolatsara__city-name {
+            border: 1px solid rgba($color: $color-purple, $alpha: 1.0);
+            background-color: rgba($color: $color-purple, $alpha: .35);
+            color: rgba($color: $color-light, $alpha: 1);
+            padding: .375rem;
+            border-radius: 28px;
+            width: max-content;
+            display: flex;
+            font-size: 14px;
+            margin-bottom: .2rem;
+            margin-right: .2rem;
           }
         }
 
