--- a/src/css/dolatsara.css
+++ b/src/css/dolatsara.css
@@ -65,6 +65,9 @@ section.dolatsara__main-header {
   height: calc(100vh - 72px);
   margin-top: 0;
   position: relative;
+  background-image: url("./../images/03.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 section.dolatsara__main-header div.dolatsara__main-content {
@@ -99,6 +102,7 @@ section.dolatsara__main-header div.dolatsara__main-content div.dolatsar__seacrh-
   padding: 0.375rem 0.5rem;
   -webkit-box-shadow: 0 0 4px #b8b8b8;
           box-shadow: 0 0 4px #b8b8b8;
+  background-color: white;
 }
 
 section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box {
