--- a/src/css/dolatsaraMenu.css
+++ b/src/css/dolatsaraMenu.css
@@ -69,7 +69,7 @@ header.dolatsara__menu div.dolatsara__all-menu {
           align-items: flex-start;
   width: 100%;
   padding: 1.35rem 2rem;
-  background: #e9e9e9;
+  background: white;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu {
@@ -113,6 +113,7 @@ header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dol
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-left: .5rem;
 }
 
 header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item svg, header.dolatsara__menu div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item i {
