--- a/src/scss/dolatsara.scss
+++ b/src/scss/dolatsara.scss
@@ -6,6 +6,9 @@ section.dolatsara__main-header {
   height: calc(100vh - 72px);
   margin-top: 0;
   position: relative;
+  
+  background-repeat: no-repeat;
+  background-size: cover;
 
   div.dolatsara__main-content {
     display: flex;
@@ -27,6 +30,7 @@ section.dolatsara__main-header {
         font-size: 14px;
         padding: 0.375rem 0.5rem;
         box-shadow: 0 0 4px rgba($color: $color-gray-4, $alpha: 1);
+        background-color: rgba($color: $color-light, $alpha: 1);
       }
     }
 
