--- a/src/scss/dolatsaraMenu.scss
+++ b/src/scss/dolatsaraMenu.scss
@@ -14,7 +14,7 @@ header.dolatsara__menu {
     align-items: flex-start;
     width: 100%;
     padding: 1.35rem 2rem;
-    background: rgba($color: $color-gray-5, $alpha: 10);
+    background: rgba($color: $color-light, $alpha: 10);
 
     nav.dolatsara__right-menu {
       padding-top: 0;
@@ -56,8 +56,8 @@ header.dolatsara__menu {
               font-size: 13px;
               display: flex;
               align-items: center;
-              // padding-left: 1rem;
-              // padding-right: 1rem;
+              padding-left: .5rem;
+              // padding-right: .5rem;
             }
 
             svg, i {
